# c2s2-cross-compile

./: CMakeLists.txt  example.c  riscv64.cmake
Math/: CMakeLists.txt  ExampleMath.c  ExampleMath.h
cmake-toolchain-howto-main/: CMakeLists.txt  README.md  riscv64.cmake
cmake-toolchain-howto-main/src/: main.c
cmake-toolchain-howto-main/src/linalg/: CMakeLists.txt  blas.c  blas.h
